--- a/.wslrc
+++ b/.wslrc
@@ -8,5 +8,15 @@ if [[ -z $(pgrep sshd ) ]]; then
   sudo service ssh start
 fi
 
-ssh-agent -k; eval $(ssh-agent -s)
-ssh-add
+if [[ -z $TMUX ]]; then
+  killall ssh-agent; eval $(ssh-agent -s)
+  ssh-add
+fi
+
+function update_environment_from_tmux() {
+  if [ -n "${TMUX}" ]; then
+    eval "$(tmux show-environment -s)"
+  fi
+}
+
+add-zsh-hook precmd update_environment_from_tmux
