Set initial volume to 100

--- a/.config/spotifyd/spotifyd.conf
+++ b/.config/spotifyd/spotifyd.conf
@@ -17,7 +17,7 @@ no_audio_cache = false
 # Various playback options. Tweak these if Spotify is too quiet.
 bitrate = 320
 volume_normalisation = true
-normalisation_pregain = -10
+initial_volume = "100"
 
 # These need to be set, but don't need to be changed.
 backend = "portaudio"
