--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -22,6 +22,7 @@ Inbox ~/.mail/gmail/Inbox
 Channel gmail
 Master :gmail-remote:
 Slave :gmail-local:
+Patterns * ![Gmail]* "[Gmail]/Sent Mail" "[Gmail]/Drafts" "[Gmail]/Bin" "[Gmail]/All mail"
 # Automatically create missing mailboxes, both locally and on the server
 Create Both
 # Save the synchronization state files in the relevant directory
@@ -53,6 +54,7 @@ Inbox ~/.mail/work/Inbox
 Channel work
 Master :work-remote:
 Slave :work-local:
+Patterns * ![Gmail]* "[Gmail]/Sent Mail" "[Gmail]/Drafts" "[Gmail]/Bin" "[Gmail]/All mail"
 # Automatically create missing mailboxes, both locally and on the server
 Create Both
 # Save the synchronization state files in the relevant directory
