Remain in copy mode when selecting/copying text

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,7 +53,8 @@ set-window-option -g mode-keys vi
 bind P paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
+# remain in copy mode selecting/copying text
+set -g @yank_action 'copy-pipe'
 # hjkl pane traversal
 bind h select-pane -L
 bind j select-pane -D
