--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,7 @@ set-window-option -g mode-keys vi
 bind P paste-buffer
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X begin-selection
 # remain in copy mode selecting/copying text
 set -g @yank_action 'copy-pipe'
 # hjkl pane traversal
