--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -g status-right-length 100
 set -g status-left '(#S) • #(uptime | cut -f 4-8 -d " " | cut -f 1-1 -d ",")'
 set -g status-right '%A %d-%m-%Y %H:%M '
 
-set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM TERM_PROGRAM'
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM TERM_PROGRAM COLORTERM'
 
 # pane number display
 set-option -g display-panes-active-colour white
