--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,6 +89,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 set -g @resurrect-capture-pane-contents 'on'
 
