Configure tab bar

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -495,8 +495,7 @@ scrollback_lines 10000
 #: }}}
 
 #: Tab bar {{{
-
-tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -535,8 +534,6 @@ tab_bar_style powerline
 #: background, with zero being no fade and one being full fade. You
 #: can change the number of cells used by adding/removing entries to
 #: this list.
-
-tab_separator "|"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
