--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -443,178 +443,4 @@ editor nvim
 map cmd+l             next_tab
 map cmd+h             previous_tab
 map cmd+t             new_tab
-# map kitty_mod+q     close_tab
-# map cmd+w           close_tab
-# map shift+cmd+w     close_os_window
-# map kitty_mod+.     move_tab_forward
-# map kitty_mod+,     move_tab_backward
-# map kitty_mod+alt+t set_tab_title
-# map shift+cmd+i     set_tab_title
-
-#: You can also create shortcuts to go to specific tabs, with 1 being
-#: the first tab, 2 the second tab and -1 being the previously active
-#: tab, and any number larger than the last tab being the last tab::
-
-#:     map ctrl+alt+1 goto_tab 1
-#:     map ctrl+alt+2 goto_tab 2
-
-#: Just as with new_window above, you can also pass the name of
-#: arbitrary commands to run when using new_tab and use
-#: new_tab_with_cwd. Finally, if you want the new tab to open next to
-#: the current tab rather than at the end of the tabs list, use::
-
-#:     map ctrl+t new_tab !neighbor [optional cmd to run]
-#: }}}
-
-#: Layout management {{{
-
-# map kitty_mod+l next_layout
-
-#: You can also create shortcuts to switch to specific layouts::
-
-#:     map ctrl+alt+t goto_layout tall
-#:     map ctrl+alt+s goto_layout stack
-
-#: Similarly, to switch back to the previous layout::
-
-#:    map ctrl+alt+p last_used_layout
-#: }}}
-
-#: Font sizes {{{
-
-#: You can change the font size for all top-level kitty OS windows at
-#: a time or only the current one.
-
-# map kitty_mod+equal     change_font_size all +2.0
-# map cmd+plus            change_font_size all +2.0
-# map cmd+shift+equal     change_font_size all +2.0
-# map kitty_mod+minus     change_font_size all -2.0
-# map cmd+minus           change_font_size all -2.0
-# map kitty_mod+backspace change_font_size all 0
-# map cmd+0               change_font_size all 0
-
-#: To setup shortcuts for specific font sizes::
-
-#:     map kitty_mod+f6 change_font_size all 10.0
-
-#: To setup shortcuts to change only the current OS window's font
-#: size::
-
-#:     map kitty_mod+f6 change_font_size current 10.0
-#: }}}
-
-#: Select and act on visible text {{{
-
-#: Use the hints kitten to select text and either pass it to an
-#: external program or insert it into the terminal or copy it to the
-#: clipboard.
-
-# map kitty_mod+e kitten hints
-
-#: Open a currently visible URL using the keyboard. The program used
-#: to open the URL is specified in open_url_with.
-
-# map kitty_mod+p>f kitten hints --type path --program -
-
-#: Select a path/filename and insert it into the terminal. Useful, for
-#: instance to run git commands on a filename output from a previous
-#: git command.
-
-# map kitty_mod+p>shift+f kitten hints --type path
-
-#: Select a path/filename and open it with the default open program.
-
-# map kitty_mod+p>l kitten hints --type line --program -
-
-#: Select a line of text and insert it into the terminal. Use for the
-#: output of things like: ls -1
-
-# map kitty_mod+p>w kitten hints --type word --program -
-
-#: Select words and insert into terminal.
-
-# map kitty_mod+p>h kitten hints --type hash --program -
-
-#: Select something that looks like a hash and insert it into the
-#: terminal. Useful with git, which uses sha1 hashes to identify
-#: commits
-
-# map kitty_mod+p>n kitten hints --type linenum
-
-#: Select something that looks like filename:linenum and open it in
-#: vim at the specified line number.
-
-# map kitty_mod+p>y kitten hints --type hyperlink
-
-#: Select a hyperlink (i.e. a URL that has been marked as such by the
-#: terminal program, for example, by ls --hyperlink=auto).
-
-
-#: The hints kitten has many more modes of operation that you can map
-#: to different shortcuts. For a full description see kittens/hints.
-#: }}}
-
-#: Miscellaneous {{{
-
-# map kitty_mod+f11    toggle_fullscreen
-# map kitty_mod+f10    toggle_maximized
-# map kitty_mod+u      kitten unicode_input
-# map kitty_mod+f2     edit_config_file
-# map kitty_mod+escape kitty_shell window
-
-#: Open the kitty shell in a new window/tab/overlay/os_window to
-#: control kitty using commands.
-
-# map kitty_mod+a>m    set_background_opacity +0.1
-# map kitty_mod+a>l    set_background_opacity -0.1
-# map kitty_mod+a>1    set_background_opacity 1
-# map kitty_mod+a>d    set_background_opacity default
-# map kitty_mod+delete clear_terminal reset active
-
-#: You can create shortcuts to clear/reset the terminal. For example::
-
-#:     # Reset the terminal
-#:     map kitty_mod+f9 clear_terminal reset active
-#:     # Clear the terminal screen by erasing all contents
-#:     map kitty_mod+f10 clear_terminal clear active
-#:     # Clear the terminal scrollback by erasing it
-#:     map kitty_mod+f11 clear_terminal scrollback active
-#:     # Scroll the contents of the screen into the scrollback
-#:     map kitty_mod+f12 clear_terminal scroll active
-
-#: If you want to operate on all windows instead of just the current
-#: one, use all instead of active.
-
-#: It is also possible to remap Ctrl+L to both scroll the current
-#: screen contents into the scrollback buffer and clear the screen,
-#: instead of just clearing the screen::
-
-#:     map ctrl+l combine : clear_terminal scroll active : send_text normal,application \x0c
-
-
-#: You can tell kitty to send arbitrary (UTF-8) encoded text to the
-#: client program when pressing specified shortcut keys. For example::
-
-#:     map ctrl+alt+a send_text all Special text
-
-#: This will send "Special text" when you press the ctrl+alt+a key
-#: combination.  The text to be sent is a python string literal so you
-#: can use escapes like \x1b to send control codes or \u21fb to send
-#: unicode characters (or you can just input the unicode characters
-#: directly as UTF-8 text). The first argument to send_text is the
-#: keyboard modes in which to activate the shortcut. The possible
-#: values are normal or application or kitty or a comma separated
-#: combination of them.  The special keyword all means all modes. The
-#: modes normal and application refer to the DECCKM cursor key mode
-#: for terminals, and kitty refers to the special kitty extended
-#: keyboard protocol.
-
-#: Another example, that outputs a word and then moves the cursor to
-#: the start of the line (same as pressing the Home key)::
-
-#:     map ctrl+alt+a send_text normal Word\x1b[H
-#:     map ctrl+alt+a send_text application Word\x1bOH
-
-#: }}}
-
-# }}}
+map cmd+w             close_tab
