Better cursor color

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -244,7 +244,7 @@ background            #2E3440
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
-cursor                #FFFFFF
+cursor                #eceff4
 
 # black
 color0   #3B4252
