--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -155,89 +155,16 @@ enable_audio_bell no
 
 tab_bar_edge top
 
-#: Which edge to show the tab bar on, top or bottom
+tab_bar_style slant
+tab_title_template "{fmt.fg.c2c2c2}{title}"
+active_tab_title_template "{fmt.fg._fff}{title}"
 
-# tab_bar_margin_width 0.0
-
-#: The margin to the left and right of the tab bar (in pts)
-
-tab_bar_style powerline
-
-#: The tab bar style, can be one of: fade, separator, powerline, or
-#: hidden. In the fade style, each tab's edges fade into the
-#: background color, in the separator style, tabs are separated by a
-#: configurable separator, and the powerline shows the tabs as a
-#: continuous line. If you use the hidden style, you might want to
-#: create a mapping for the select_tab action which presents you with
-#: a list of tabs and allows for easy switching to a tab.
-
-# tab_bar_min_tabs 2
-
-#: The minimum number of tabs that must exist before the tab bar is
-#: shown
-
-# tab_switch_strategy previous
-
-#: The algorithm to use when switching to a tab when the current tab
-#: is closed. The default of previous will switch to the last used
-#: tab. A value of left will switch to the tab to the left of the
-#: closed tab. A value of right will switch to the tab to the right of
-#: the closed tab. A value of last will switch to the right-most tab.
-
-# tab_fade 0.25 0.5 0.75 1
-
-#: Control how each tab fades into the background when using fade for
-#: the tab_bar_style. Each number is an alpha (between zero and one)
-#: that controls how much the corresponding cell fades into the
-#: background, with zero being no fade and one being full fade. You
-#: can change the number of cells used by adding/removing entries to
-#: this list.
-
-#: The separator between tabs in the tab bar when using separator as
-#: the tab_bar_style.
-
-# tab_activity_symbol none
-
-#: Some text or a unicode symbol to show on the tab if a window in the
-#: tab that does not have focus has some activity.
-
-# tab_title_template "{title}"
-
-#: A template to render the tab title. The default just renders the
-#: title. If you wish to include the tab-index as well, use something
-#: like: {index}: {title}. Useful if you have shortcuts mapped for
-#: goto_tab N. In addition you can use {layout_name} for the current
-#: layout name and {num_windows} for the number of windows in the tab.
-#: Note that formatting is done by Python's string formatting
-#: machinery, so you can use, for instance, {layout_name[:2].upper()}
-#: to show only the first two letters of the layout name, upper-cased.
-#: If you want to style the text, you can use styling directives, for
-#: example: {fmt.fg.red}red{fmt.fg.default}normal{fmt.bg._00FF00}green
-#: bg{fmt.bg.normal}. Similarly, for bold and italic:
-#: {fmt.bold}bold{fmt.nobold}normal{fmt.italic}italic{fmt.noitalic}.
-
-# active_tab_title_template none
-
-#: Template to use for active tabs, if not specified falls back to
-#: tab_title_template.
-
-active_tab_foreground     #D8DEE9
-active_tab_background     #2E3440
-# active_tab_font_style   bold-italic
+active_tab_foreground     #4c566a
+active_tab_background     #81a1c1
 inactive_tab_foreground   #D8DEE9
-inactive_tab_background   #2E3440
-# inactive_tab_font_style normal
+inactive_tab_background   #3b4252
 
-#: Tab bar colors and styles
-
-# tab_bar_background none
-
-#: Background color for the tab bar. Defaults to using the terminal
-#: background color.
-
-#: }}}
-
-#: Color scheme {{{
+tab_bar_background        #434c5e
 
 foreground            #D8DEE9
 background            #2E3440
