Open kitty instead of terminal

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,7 +98,7 @@ set -g @continuum-restore 'on'
 
 # open terminal on reboot
 set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'terminal'
+set -g @continuum-boot-options 'kitty'
 
 # save tmux sessions every 5 min
 set -g @continuum-save-interval '5'
