--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+startup_session ~/.config/kitty/kitty-session.conf
+
 font_family      Hack Nerd Font
 bold_font        auto
 italic_font      auto
