--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,6 +12,7 @@ font_size 16.0
 adjust_line_height  100%
 adjust_column_width 100%
 
+macos_show_window_title_in none
 active_border_color none
 
 scrollback_lines 10000
