Add xterm-256color as term for backwards compatability
Makes sure when connecting via ssh to other servers the correct term
gets send

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -72,6 +72,7 @@ color7   #E5E9F0
 color15  #ECEFF4
 
 editor nvim
+term xterm-256color
 
 map cmd+l             next_tab
 map cmd+h             previous_tab
