--- a/.msmtprc
+++ b/.msmtprc
@@ -9,7 +9,7 @@ account gmail
 host smtp.gmail.com
 from lenny.donnez@gmail.com
 user lenny.donnez@gmail.com
-passwordeval gpg -q --no-tty --for-your-eyes-only -d ~/.secrets/lenny.donnez@gmail.com.gpg
+passwordeval gpg -q --no-tty --for-your-eyes-only -d ~/.secrets/lenny.donnez@gmail.com-app-password.gpg
 
 account work
 host smtp.gmail.com
