--- a/.wslrc
+++ b/.wslrc
@@ -4,12 +4,6 @@ if [[ -z $(pgrep cron) ]]; then
   sudo service cron start
 fi
 
-if [[ -z $(pgrep sshd ) ]]; then
-  sudo service ssh start
-fi
-
-if [ -z "$SSH_AUTH_SOCK" ]
-then
-   eval $(ssh-agent -s)
-   ssh-add
+if [[ -z "$SSH_AUTH_SOCK" ]]; then
+  eval $(ssh-agent -s)
 fi
