--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -18,6 +18,7 @@ Subfolders Verbatim
 # The trailing "/" is important
 Path ~/.mail/gmail/
 Inbox ~/.mail/gmail/Inbox
+Flatten .
 
 Channel gmail
 Far :gmail-remote:
@@ -50,6 +51,7 @@ Subfolders Verbatim
 # The trailing "/" is important
 Path ~/.mail/work/
 Inbox ~/.mail/work/Inbox
+Flatten .
 
 Channel work
 Far :work-remote:
@@ -82,6 +84,7 @@ Subfolders Verbatim
 # The trailing "/" is important
 Path ~/.mail/hotmail/
 Inbox ~/.mail/hotmail/Inbox
+Flatten .
 
 Channel hotmail
 Far :hotmail-remote:
