Disable git directory ownership checks
Newer versions of Git, starting with 2.35.2 and 2.36, including Git for Windows, are stricter about directory ownership:
https://github.blog/2022-04-18-highlights-from-git-2-36/#stricter-repository-ownership-checks.

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,5 @@
 	reviewone = !nvim -p +\"tabdo Gdiff $REVIEW_BASE\" +\"let g:gitgutter_diff_base = '$REVIEW_BASE'\"
 [gpg]
 	program = gpg2
+[safe]
+	directory = *
