Update font config for kitty 0.28

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,9 +8,7 @@ italic_font      auto
 bold_italic_font auto
 
 font_size 16.0
-
-adjust_line_height  100%
-adjust_column_width 100%
+text_composition_strategy 1.0 20
 
 macos_show_window_title_in none
 active_border_color none
