--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,77 +23,6 @@ tab_bar_style slant
 tab_title_template "{fmt.fg.c2c2c2}{title}"
 active_tab_title_template "{fmt.fg._fff}{title}"
 
-# The basic colors
-foreground              #C6D0F5
-background              #303446
-selection_foreground    #303446
-selection_background    #F2D5CF
-
-# Cursor colors
-cursor                  #F2D5CF
-cursor_text_color       #303446
-
-# URL underline color when hovering with mouse
-url_color               #F2D5CF
-
-# Kitty window border colors
-active_border_color     #BABBF1
-inactive_border_color   #737994
-bell_border_color       #E5C890
-
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
-
-# Tab bar colors
-active_tab_foreground   #232634
-active_tab_background   #CA9EE6
-inactive_tab_foreground #C6D0F5
-inactive_tab_background #292C3C
-tab_bar_background      #232634
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #303446
-mark1_background #BABBF1
-mark2_foreground #303446
-mark2_background #CA9EE6
-mark3_foreground #303446
-mark3_background #85C1DC
-
-# The 16 terminal colors
-
-# black
-color0 #51576D
-color8 #626880
-
-# red
-color1 #E78284
-color9 #E78284
-
-# green
-color2  #A6D189
-color10 #A6D189
-
-# yellow
-color3  #E5C890
-color11 #E5C890
-
-# blue
-color4  #8CAAEE
-color12 #8CAAEE
-
-# magenta
-color5  #F4B8E4
-color13 #F4B8E4
-
-# cyan
-color6  #81C8BE
-color14 #81C8BE
-
-# white
-color7  #B5BFE2
-color15 #A5ADCE
-
 editor nvim
 term xterm-256color
 
@@ -101,3 +30,45 @@ map cmd+l             next_tab
 map cmd+h             previous_tab
 map cmd+t             new_tab
 map cmd+w             close_tab
+
+background #22272e
+foreground #cdd9e5
+selection_background #264466
+selection_foreground #768390
+url_color #768390
+cursor #6cb6ff
+cursor_text_color background
+
+# Tabs
+active_tab_background #539bf5
+active_tab_foreground #1e2228
+inactive_tab_background #636e7b
+inactive_tab_foreground #1e2228
+
+# Windows Border
+active_border_color #444c56
+inactive_border_color #444c56
+
+# normal
+color0 #545d68
+color1 #f47067
+color2 #57ab5a
+color3 #c69026
+color4 #539bf5
+color5 #b083f0
+color6 #39c5cf
+color7 #909dab
+
+# bright
+color8 #636e7b
+color9 #ff938a
+color10 #6bc46d
+color11 #daaa3f
+color12 #6cb6ff
+color13 #dcbdfb
+color14 #56d4dd
+color15 #cdd9e5
+
+# extended colors
+color16 #daaa3f
+color17 #ff938a
