--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -g default-shell $SHELL
 set -g status on
 set -g focus-events on
+set -gq allow-passthrough on
 set-option -g history-limit 20000
 
 # set window split
