--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 startup_session ~/.config/kitty/kitty-session.conf
 
-font_family      Hack Nerd Font
+font_family      Hack
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
