--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -101,3 +101,4 @@ map cmd+l             next_tab
 map cmd+h             previous_tab
 map cmd+t             new_tab
 map cmd+w             close_tab
+map cmd+n             new_os_window
