--- a/.mbsyncrc
+++ b/.mbsyncrc
@@ -7,8 +7,8 @@ User lenny.donnez@gmail.com
 PassCmd "gpg -q --no-tty --for-your-eyes-only -d ~/.secrets/lenny.donnez@gmail.com-app-password.gpg"
 #
 # Use SSL
-SSLType IMAPS
 SSLVersions TLSv1.2
+TLSType IMAPS
 
 IMAPStore gmail-remote
 Account gmail
@@ -40,8 +40,8 @@ User lenny_donnez@hotmail.com
 PassCmd "gpg -q --no-tty --for-your-eyes-only -d ~/.secrets/lenny_donnez@hotmail.com.gpg"
 #
 # Use SSL
-SSLType IMAPS
 SSLVersions TLSv1.2
+TLSType IMAPS
 
 IMAPStore hotmail-remote
 Account hotmail
