Ensure KITTY_* envs gets passed through
Is necessary to make certain features of the kitty graphics protocol
work in tmux (image previewing for example).

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,7 @@ set -g status-right-length 100
 set -g status-left '(#S) • #(uptime | cut -f 4-8 -d " " | cut -f 1-1 -d ",")'
 set -g status-right '%A %d-%m-%Y %H:%M '
 
-set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM TERM_PROGRAM COLORTERM'
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM TERM_PROGRAM COLORTERM KITTY_WINDOW_ID KITTY_PID'
 
 # pane number display
 set-option -g display-panes-active-colour white
